add create lecture controller and form

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -25,6 +25,7 @@
         </li>
         <li><a href="https://css-tricks.com/perfect-full-page-background-image/">Embeded Background Image</a></li>
           <li><a href="http://stackoverflow.com/questions/12733238/retain-twitter-bootstrap-collapse-state-on-page-refresh-navigation">state unchange</a></li>
+          <li><a href="http://eonasdan.github.io/bootstrap-datetimepicker/">Bootstrap Datepicker</a></li>
       </ul>
     </div>
   </div>
