--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,12 +7,15 @@
         <title>@Messages("title")</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-datetimepicker.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery/jquery-2.1.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/angular.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/password.js")" type="text/javascript"></script>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.min.css")">
+        <script src="@routes.Assets.at("javascripts/datepicker/moment.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/datepicker/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -51,6 +54,7 @@
                 @(new java.util.Date)
                 </small>
             </div>
+            <script src="@routes.Assets.at("javascripts/datepicker/datepicker.js")" type="text/javascript"></script>
         </div>
 
 
