fix the issue which after application rebooting all the relations in the newly created database are lost.(at app boot pahse, all the created database should be added back again)

--- a/app/views/lectures/index.scala.html
+++ b/app/views/lectures/index.scala.html
@@ -25,7 +25,8 @@
               <a href="#" class="list-group-item">
               @lecture.courseName
               </a>
-            }} else {
+            }
+          } else {
             @Messages("lectures.none")
           }
           </div>
