--- a/app/views/lectures/lecturemy.scala.html
+++ b/app/views/lectures/lecturemy.scala.html
@@ -24,7 +24,7 @@
              <div class="list-group">
                @if(value != null){
                @for(lecture <- value) {
-                 <a href="#" class="list-group-item">
+                 <a href="@controllers.lectures.admin.routes.Lecturehome.generatelecturehome(user.lastname,key,lecture.courseName)" class="list-group-item">
                  @lecture.courseName
                  </a>
                }} else {
