add more model with @versions, fix the display issue in lecturemy

--- a/app/views/dashboard/index.scala.html
+++ b/app/views/dashboard/index.scala.html
@@ -10,6 +10,7 @@
             <ul>
                 <li>Matrikel Number: @user.id</li>
                 <li>Lastname: @user.getFirstname</li>
+                <li>User Group: @user.roles.toString()</li>
                 <li>User created on: @user.dateCreation</li>
                 <li>User last login: @user.dateLastlogin</li>
             </ul>
