--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -1,12 +1,51 @@
 @(user:User)(semesteruser: Semesteruser)(lecture: Lecture)
 
 @dashboard.dashboard(user){
-  <div class="container col-md-6 col-md-offset-1 well">
-    <ul>
-      <li>@user.lastname</li>
-      <li>@semesteruser.semester</li>
-      <li>@lecture.courseName</li>
-      <li>@lecture.desription</li>
+  <div class="col-md-6 col-md-offset-1 well well-sm">
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#home" data-toggle="tab">@Messages("lecture.home.page")</a></li>
+      @if(user.roles.toString.equals("Teachers")){
+       <li><a href="#editor" data-toggle="tab">@Messages("lecture.home.editor")</a></li>
+      }
+      <li><a href="#forum" data-toggle="tab">@Messages("lecture.home.forum")</a></li>
     </ul>
+    <div class="tab-content">
+      <div class="tab-pane active" id="home">
+        <br>
+        <div class="panel panel-default">
+        <div class="panel-heading">@Messages("lecture.home.des") <span class="label label-info pull-right">@lecture.courseName</span> <span class="label label-success pull-right">@lecture.semester</span> </div>
+        <div class="panel-body">
+          @lecture.desription
+        </div>
+      </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">@Messages("lecture.home.terms")</div>
+          <div class="panel-body">
+          <ul>
+            <li>@Messages("lecture.numberofassignments") @lecture.totalassignment,@Messages("lecture.atleast") @lecture.requriednumberofvalidassignment @Messages("lecture.validinfo")</li>
+            <li>@Messages("lecture.validassignmentinfo")@lecture.requiredpercentfovalidassignment</li>
+            <li>@Messages("lecture.validexaminfo")@lecture.minimumPercentageForExamination </li>
+            <li>@Messages("lecture.validoptionalinfo")@lecture.optionalassignments@Messages("lecutre.validoptionalinfo1")</li>
+          </ul>
+            </div>
+        </div>
+        <button class="btn btn-default pull-right">Edit</button>
+        <hr>
+        <div class="panel panel-default">
+          <div class="panel-heading">@Messages("lecture.home.homeworks")</div>
+          <div class="panel-body">
+
+          </div>
+        </div>
+      </div>
+      <div class="tab-pane" id="editor">Secondo sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+        Aliquam in felis sit amet augue.
+        @*todo finish here later*@
+      </div>
+      <div class="tab-pane" id="forum">Secondo sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+        Aliquam in felis sit amet augue.
+      </div>
+    </div>
   </div>
+
 }
