--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -3,14 +3,14 @@
 @dashboard.dashboard(user){
   <div class="col-md-6 col-md-offset-1 well well-sm">
     <ul class="nav nav-tabs">
-      <li class="active"><a href="#home" data-toggle="tab">@Messages("lecture.home.page")</a></li>
+      <li class="active"><a href="#preview" data-toggle="tab">@Messages("lecture.home.admin")</a></li>
       @if(user.roles.toString.equals("Teachers")){
        <li><a href="#editor" data-toggle="tab">@Messages("lecture.home.editor")</a></li>
       }
       <li><a href="#forum" data-toggle="tab">@Messages("lecture.home.forum")</a></li>
     </ul>
     <div class="tab-content">
-      <div class="tab-pane active" id="home">
+      <div class="tab-pane active" id="preview">
         <br>
         <div class="panel panel-default">
         <div class="panel-heading">@Messages("lecture.home.des") <span class="label label-info pull-right">@lecture.courseName</span> <span class="label label-success pull-right">@lecture.semester</span> </div>
@@ -29,7 +29,6 @@
           </ul>
             </div>
         </div>
-        <button class="btn btn-default pull-right">Edit</button>
         <hr>
         <div class="panel panel-default">
           <div class="panel-heading">@Messages("lecture.home.homeworks")</div>
