--- a/app/views/lectures/admin/createlectureform.scala.html
+++ b/app/views/lectures/admin/createlectureform.scala.html
@@ -67,8 +67,7 @@
 
         <div class="form-group">
             <label>@Messages("lecture.form.description")</label>
-            <textarea class="form-control"  name="description" rows="10">
-            </textarea>
+            <textarea class="form-control"  name="description" rows="10"></textarea>
         </div>
 
         <div class="form-group pull-right">
