--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -25,7 +25,11 @@
         </div>
       </div>
         <div class="panel panel-default">
-          <div class="panel-heading">@Messages("lecture.home.terms")</div>
+          <div class="panel-heading">@Messages("lecture.home.terms")
+            <button class="btn btn-link"  data-toggle="modal" data-target="#termsModal">
+              <i class="fa fa-pencil-square-o"></i>
+            </button>
+          </div>
           <div class="panel-body">
           <ul>
             <li>@Messages("lecture.numberofassignments") @lecture.totalassignment,@Messages("lecture.atleast") @lecture.requriednumberofvalidassignment @Messages("lecture.validinfo")</li>
@@ -84,6 +88,68 @@
               <label>@Messages("lecture.form.description")</label>
               <textarea class="form-control"  name="modifieddescription" rows="10">@lecture.desription</textarea>
             </div>
+            <button type="button" class="btn btn-default" data-dismiss="modal">@Messages("lecture.form.close")</button>
+            <button type="submit" class="btn btn-primary pull-right">@Messages("lecture.form.change")</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  @*here begins with modal for terms change*@
+  <div class="modal fade" id="termsModal" tabindex="-1" role="dialog" aria-labelledby="termsModal" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">@Messages("lecture.form.modterms")</h4>
+        </div>
+        <div class="modal-body">
+          <form class="form-group" action="@controllers.lectures.admin.routes.Lecturehome.modifyterms(user.lastname,lecture.semester,lecture.courseName)" method="post">
+              <div class="form-group">
+                <label class="control-label">@Messages("lecture.form.totalassignment")</label>
+                <input type="number" class="form-control" name="totalassignment" value="@lecture.totalassignment">
+              </div>
+              <div class="form-group">
+                <label class="control-label">@Messages("lecture.form.option")</label>
+                <input type="number" class="form-control" name="optionalassigment" value="@lecture.optionalassignments">
+              </div>
+
+
+            <div class="form-group">
+              <label class="control-label">@Messages("lecture.form.validhandin")</label>
+              <input type="number" step="0.01" class="form-control" name="percentageforvalidassignment" value="@lecture.requiredpercentfovalidassignment">
+            </div>
+            <div class="form-group">
+              <label class="control-label6">@Messages("lecture.form.validexam")</label>
+              <input type="number" step="0.01" class="form-control" name="percentageforexam" value="@lecture.minimumPercentageForExamination">
+            </div>
+
+            <div class="form-group">
+              <label class="control-label">@Messages("lecture.form.totalvalid")</label>
+              <input type="number" class="form-control" name="numberofvalidassignment" value="@lecture.requriednumberofvalidassignment">
+            </div>
+            <div class="form-group">
+              <label class="control-label">@Messages("lecture.form.closingdate")</label>
+              <input id="datetimepicker1" type="text" class="form-control" name="closingdate" value="@lecture.closingdate">
+            </div>
+
+            @if(!lecture.localrepo){
+              <label class="label-info">@Messages("lecture.form.info1")</label>
+              <div class="checkbox">
+                <label class="control-label">
+                  <input type="checkbox" name="localrepo" value="true">
+                  @Messages("lecture.form.repo")
+                </label>
+              </div>
+            } else {
+              <label class="label-info">@Messages("lecture.form.info2")</label>
+              <div class="checkbox">
+                <label class="control-label">
+                  <input type="checkbox" name="localrepo" value="true" checked>
+                  @Messages("lecture.form.repo")
+                </label>
+              </div>
+            }
             <button type="button" class="btn btn-default" data-dismiss="modal">@Messages("lecture.form.close")</button>
             <button type="submit" class="btn btn-primary pull-right">@Messages("lecture.form.change")</button>
           </form>
