change closing date to Date for the future, also delte custom date picker using the browser built in

--- a/app/views/lectures/admin/createlectureform.scala.html
+++ b/app/views/lectures/admin/createlectureform.scala.html
@@ -60,7 +60,7 @@
             </div>
              <div class="form-group">
                  <label class="control-label">@Messages("lecture.form.closingdate")</label>
-                 <input id="datetimepicker1" type="text" class="form-control" name="closingdate" placeholder="@Messages("lecture.form.date")">
+                 <input type="date" class="form-control" name="closingdate" placeholder="@Messages("lecture.form.date")">
              </div>
         </div>
         <br>
