--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -21,6 +21,8 @@
           <span class="label label-success pull-right">@lecture.semester</span>
         </div>
         <div class="panel-body">
+          <span class="label label-warning">@Messages("lecture.closingdate")@lecture.closingdate</span>
+          <hr>
           @lecture.desription
         </div>
       </div>
