add warning messages if lecture failed to create

--- a/app/views/lectures/admin/createlectureform.scala.html
+++ b/app/views/lectures/admin/createlectureform.scala.html
@@ -1,6 +1,9 @@
 @(user:User)
 @dashboard.dashboard(user){
 <div class="col-md-6 col-md-offset-1 well">
+    <div class="text-center">
+    @wflash()
+    </div>
     <div class="page-header"  >
         <h1 class="text-center">Lecture Form
             <small>Use this form to create new lecture</small>
