change the wflash place

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -42,7 +42,9 @@
             </div>
 
         </nav>
-
+        <div class="col-md-12 text-center">
+        @wflash()
+        </div>
 
         @content
 
