--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,9 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <br>
+            <div class="col-md-12 text-center">
+            @wflash()
+            </div>
             <br>
             <div class="col-md-4">
                 <div class="jumbotron well">
