--- a/app/views/lectures/lecturemy.scala.html
+++ b/app/views/lectures/lecturemy.scala.html
@@ -2,6 +2,9 @@
 
 @dashboard.dashboard(user){
   <div class="panel-group col-md-6 col-md-offset-1 well" id="mylecturelist" role="tablist" aria-multiselectable="true">
+    <div class="col-md-12 text-center">
+    @wflash()
+    </div>
     <div class="page-header"  >
       <h1 class="text-center">My Lectures
         <small>Choose Semester for details</small>
