remade upload and download function, so that the files are not saved under the application file system,fix the null pointer issued within the secured class

--- a/app/views/forbidden.scala.html
+++ b/app/views/forbidden.scala.html
@@ -1,14 +1,10 @@
-@(user: User)
 
-@main(user) {
+
+@main() {
     <div class="container">
 Your are not allowed to see this site
-    <br>User:
-<ul>
-    <li>Matrikel Number: @user.id</li>
-    <li>Lastname: @user.getFirstname</li>
-    <li>User created on: @user.dateCreation</li>
-</ul>
+    <br>Your IP is:
+
 
     this site is only for user to use
     </div>
