--- a/app/views/lectures/lecturemy.scala.html
+++ b/app/views/lectures/lecturemy.scala.html
@@ -30,10 +30,13 @@
                  @if(user.roles.toString.equals("Teachers")||user.roles.toString.equals("Assistants")){
                    <a href="@controllers.lectures.admin.routes.Lecturehome.generatelecturehome(user.lastname,key,lecture.courseName)" class="list-group-item">
                  @lecture.courseName
-                  </a>}else{
-                   <a href="@controllers.lectures.user.routes.Lecturehome.generatelecturehome(user.lastname,key,lecture.courseName)" class="list-group-item">
+                  </a>} else {
+
+                   @if(user.roles.toString.equals(UserRoll.Students.toString)){
+                     <a href="@controllers.lectures.user.routes.Lecturehome.generatelecturehome(user.lastname,key,lecture.courseName)" class="list-group-item">
                      @lecture.courseName
-                 </a>}
+                     </a>}
+                 }
                }
                } else {
                  @Messages("lectures.none")
