--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -1,4 +1,103 @@
 @(user:User)(semesteruser: Semesteruser)(lecture: Lecture)
 @dashboard.dashboard(user){
-  to be continued
+  <div class="col-md-8 well well-sm">
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#home" data-toggle="tab">@Messages("lecture.home.admin")</a></li>
+      <li><a href="#forum" data-toggle="tab">@Messages("lecture.home.forum")</a></li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane active" id="home">
+        <br>
+        <div class="panel panel-default">
+          <div class="panel-heading">@Messages("lecture.home.des")
+            <span class="label label-info pull-right">@lecture.courseName</span>
+            <span class="label label-success pull-right">@lecture.semester</span>
+          </div>
+          <div class="panel-body">
+            <span class="label label-warning">@Messages("lecture.closingdate")@lecture.closingdate</span>
+            <hr>
+            @lecture.desription
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">@Messages("lecture.home.terms")
+          </div>
+          <div class="panel-body">
+            <ul>
+              <li>@Messages("lecture.numberofassignments") @lecture.totalassignment,@Messages("lecture.atleast") @lecture.requriednumberofvalidassignment @Messages("lecture.validinfo")</li>
+              <li>@Messages("lecture.validassignmentinfo")@lecture.requiredpercentfovalidassignment</li>
+              <li>@Messages("lecture.validexaminfo")@lecture.minimumPercentageForExamination </li>
+              <li>@Messages("lecture.validoptionalinfo")@lecture.optionalassignments@Messages("lecutre.validoptionalinfo1")</li>
+            </ul>
+          </div>
+        </div>
+        <hr>
+        <div class="panel panel-default">
+          <div class="panel-heading">@Messages("lecture.home.homeworks")
+          </div>
+          <div class="panel-body">
+          @Messages("lecture.home.homework")
+            <br>
+            @if(lecture.attendent.contains(semesteruser)){
+              <table class="table table-striped custab">
+                <thead>
+                  <tr>
+                    <th>@Messages("assignment.title")</th>
+                    <th>@Messages("assignment.exercise")</th>
+                    <th>@Messages("lecture.form.addionalinfo")</th>
+                    <th  class="text-center">@Messages("assignment.action")</th>
+                    <th>@Messages("assignment.status")</th>
+                    <th>@Messages("assignment.expired")</th>
+                  </tr>
+                </thead>
+                @for(currentassignment <- lecture.assignments){
+                  <tr>
+                    <td>@currentassignment.title@if(currentassignment.uploadfile!=null){<a href="@controllers.lectures.routes.Lecturehub.getFiles(currentassignment.uploadfile)"><i class="fa fa-download"></i></a>}</td>
+                    <td>@currentassignment.numberofexercise</td>
+                    <td>@currentassignment.addtionalinfo</td>
+                    <td  class="text-center">
+                    @if(currentassignment.isExpired()){<a data-toggle="modal" data-target="#@currentassignment.id" title="@Messages("Assignment.handin")"><i class="fa fa-pencil-square-o"></i></a>
+                      <a title="delete" href="#change the hand in controller"><i class="fa fa-times"></i></a>}
+                    </td>
+                    <td>uploaded or not uploaded</td>
+                    <td>@currentassignment.deadline</td>
+                  </tr>
+                  <div class="modal fade" id="@currentassignment.id" tabindex="-1" role="dialog" aria-labelledby="@currentassignment.id" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h4 class="modal-title" id="myModalLabel">@Messages("Assignment.handin")</h4>
+                        </div>
+                        <div class="modal-body">
+                          <form action="#some action for this form" method="post" enctype="multipart/form-data">
+
+                            <div class="form-group">
+                              <label>@Messages("lecture.action.upload")</label>
+                              <input type="file" name="uploadfile">
+                            </div>
+                            <div class="form-group">
+                              <label>@Messages("Assignment.commit")</label>
+                              <textarea class="form-control"  name="addtionalinfo" rows="10"></textarea>
+                            </div>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">@Messages("lecture.form.close")</button>
+                            <button type="submit" class="btn btn-primary pull-right">@Messages("lecture.form.change")</button>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                }
+              </table>} else {
+              <div class="alert alert-danger text-center">@Messages("lecture.singin") <button class="btn btn-success" type="submit">@Messages("lecture.singup")</button></div>}
+          </div>
+
+        </div>
+      </div>
+      <div class="tab-pane" id="forum">
+        there is a forum
+      </div>
+    </div>
+
+
+  </div>
 }
