--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -88,7 +88,9 @@
                   </div>
                 }
               </table>} else {
-              <div class="alert alert-danger text-center">@Messages("lecture.singin") <button class="btn btn-success" type="submit">@Messages("lecture.singup")</button></div>}
+              <div class="alert alert-danger text-center">@Messages("lecture.singin") <form action="@controllers.lectures.user.Lecturehome.addSemesterusertoLecture(semesteruser.semester,lecture,semesteruser)" >
+                <button class="btn btn-success" type="submit">@Messages("lecture.singup")</button>
+              </form></div>}
           </div>
 
         </div>
