--- a/app/views/lectures/index.scala.html
+++ b/app/views/lectures/index.scala.html
@@ -22,19 +22,25 @@
           <div class="list-group">
           @if(value != null){
             @for(lecture <- value) {
-              @if(user.roles.toString.equals("Teachers")||user.roles.toString.equals("Assistants")){
-                <a href="@controllers.lectures.admin.routes.Lecturehome.generatelecturehome(user.lastname,key,lecture.courseName)" class="list-group-item">
-                @lecture.courseName
-                </a>} else {
-
-                @if(user.roles.toString.equals(UserRoll.Students.toString)){
-                  <a href="@controllers.lectures.user.routes.Lecturehome.generatelecturehome(user.lastname,key,lecture.courseName)" class="list-group-item">
+              @if(lecture != null) {
+                @if(user.roles.toString.equals("Teachers") || user.roles.toString.equals("Assistants")) {
+                  <a href="@controllers.lectures.admin.routes.Lecturehome.generatelecturehome(user.lastname, key, lecture.courseName)" class="list-group-item">
                   @lecture.courseName
-                  </a>}
-              }
+                  </a>
+                } else {
+
+                  @if(user.roles.toString.equals(UserRoll.Students.toString)) {
+                    <a href="@controllers.lectures.user.routes.Lecturehome.generatelecturehome(user.lastname, key, lecture.courseName)" class="list-group-item">
+                    @lecture.courseName
+                    </a>
+                  }
+                }
+              }else {<div class="alert alert-danger">@Messages("lectures.allnone")</div>}
             }
+
+
           } else {
-            @Messages("lectures.none")
+            <div class="alert alert-danger">@Messages("lectures.allnone")</div>
           }
           </div>
         </div>
