--- a/app/views/lectures/lecturemy.scala.html
+++ b/app/views/lectures/lecturemy.scala.html
@@ -39,7 +39,7 @@
                  }
                }
                } else {
-                 @Messages("lectures.none")
+                 <div class="alert alert-danger">@Messages("lectures.none")</div>
                }
              </div>
            </div>
